--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,6 @@
 main {
     padding-top: 60px;
+    margin-left: 50px;
 }
 
 
@@ -10,6 +11,7 @@ main {
     height: 60px;
     background-color: #ffffff;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+
 }
 
 
