--- a/public/css/progstyle.css
+++ b/public/css/progstyle.css
@@ -1,12 +1,33 @@
+.program-header {
+    text-align: center;
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+}
+
+.program-header a {
+    text-decoration: none;
+    display: inline-block;
+    width: 25%
+}
+
 .program-container {
     column-count: 5;
     column-gap: 20px;
-    margin-top: 50px;
+    margin-top: 10%;
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
+.program-title {
+    font-size: 24px;
+    margin-bottom: 10px;
 }
 
 .program-button {
-    background-color: #007bff;
-    color: white;
+    background-color: #82a8d0;
     padding: 10px 20px;
     border: none;
     border-radius: 8px;
@@ -18,5 +39,41 @@
     break-inside: avoid;
     /* Empêche le bouton de se diviser entre les colonnes */
     transition: transform 0.3s ease;
+    color: #252424;
+    font-weight: bold;
 }
 
+.program-item {
+    background-color: #82a8d0;
+    padding: 10px;
+    border-radius: 8px;
+    margin-bottom: 10px;
+    break-inside: avoid;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.program-name {
+
+    margin-right: 10px;
+    background-color: #82a8d0;
+    color: #252424;
+
+
+}
+
+.program-button-delete {
+    background-image: url('../images/bin.svg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 25px;
+    height: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    transition: transform 0.2s ease;
+    background-color: #82a8d0;
+}
