--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,8 +8,8 @@ main {
 
 .header-button {
 
-    background-color: #007bff;
-    color: white;
+    background-color: #82a8d0;
+    color: #252424;
     border: none;
     border-radius: 8px;
     padding: 8px 16px;
@@ -18,6 +18,7 @@ main {
     text-decoration: none;
     display: inline-block;
     transition: transform 0.3s ease;
+    font-weight: bold;
 }
 
 .header-button:hover {
@@ -39,17 +40,28 @@ main {
 .logo {
     height: 100%;
     width: auto;
-    margin-left: 1%;
-    margin-top: 1%;
     object-fit: contain;
+    max-height: 100%;
+    background-color: white;
+    position: relative;
+}
+
+.logo img {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
+    background-color: white;
+    position: relative;
 }
 
 .header span {
     margin-left: auto;
     display: flex;
     margin-right: 1%;
+    background-color: #ffffff;
 }
 
 * {
     margin: 0;
+    background-color: #e6f3ff;
 }
