--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,10 +1,11 @@
 main {
 
-    padding-top: 5%;
+    padding-top: 10vh;
     display: flex;
     flex-direction: column;
     background-color: #e6f3ff;
 }
+
 
 .header-button {
 
@@ -30,7 +31,7 @@ main {
     position: fixed;
     top: 0;
     width: 100%;
-    height: 10%;
+    height: 10vh;
     background-color: #ffffff;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     display: flex;
